--- a/app/src/main/res/layout/contact_email_item_with_button.xml
+++ b/app/src/main/res/layout/contact_email_item_with_button.xml
@@ -33,7 +33,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:background="@android:color/transparent"
         android:padding="0dp"
         android:src="@drawable/ic_paper_plane"
-        android:tint="@color/contact_action" />
+        android:tint="@color/interaction_norm" />
 
     <LinearLayout
         android:layout_width="match_parent"
