--- a/app/src/main/res/layout/contact_vcard_item_note.xml
+++ b/app/src/main/res/layout/contact_vcard_item_note.xml
@@ -27,68 +27,24 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:id="@+id/fields_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/fields_default_space"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal"
-            android:paddingStart="@dimen/padding_s"
-            android:paddingEnd="@dimen/padding_s"
-            android:paddingBottom="@dimen/padding_m">
+        <include layout="@layout/layout_contacts_edit_filed_type_selector" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@id/btnOptionType"
-                android:paddingStart="@dimen/padding_s">
-
-                <!-- Option Name -->
-                <TextView
-                    android:id="@+id/optionTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/contact_heading"
-                    android:textSize="16sp"
-                    tools:text="Email Address" />
-            </LinearLayout>
-
-            <ImageButton
-                android:id="@+id/btnOptionType"
-                android:layout_width="@dimen/padding_l"
-                android:layout_height="@dimen/padding_l"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="center"
-                android:background="@android:color/transparent"
-                android:src="@drawable/triangle_down"
-                tools:ignore="ContentDescription" />
-        </RelativeLayout>
-
-        <include layout="@layout/layout_edit_filed_with_delete" />
+        <include layout="@layout/layout_contacts_edit_filed_with_delete" />
     </LinearLayout>
 
-    <ch.protonmail.android.views.CustomFontButton
+    <TextView
         android:id="@+id/btnAddNewRow"
-        style="@style/ContactOptionButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_plus"
-        android:drawablePadding="@dimen/padding_s"
-        android:paddingLeft="0dp"
-        android:paddingRight="0dp"
-        android:text=""
-        android:textAlignment="viewStart"
-        android:textColor="@color/contact_action"
+        android:background="?selectableItemBackground"
+        android:drawablePadding="@dimen/padding_m"
+        android:gravity="center_vertical"
+        android:padding="@dimen/padding_m"
         android:textAllCaps="true"
         android:visibility="gone"
-        app:fontName="Roboto-Regular.ttf"
+        app:drawableStartCompat="@drawable/ic_plus"
         tools:text="Add new x"
         tools:visibility="visible" />
 </LinearLayout>
