--- a/app/src/main/res/layout/content_edit_create_contact_group_header.xml
+++ b/app/src/main/res/layout/content_edit_create_contact_group_header.xml
@@ -61,6 +61,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_m"
             android:orientation="vertical"
             android:paddingHorizontal="@dimen/padding_l">
 
