--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -23,6 +23,7 @@
     <item name="more_items_ll_more_text_view" type="id"/>
     <item name="multi_line_label_recycler_view" type="id"/>
     <item name="side_drawer_recycler_view" type="id"/>
+    <item name="single_line_label_more_text_view" type="id"/>
 
     <item name="monday" type="id"/>
     <item name="tuesday" type="id"/>
