--- a/app/src/main/res/layout/contact_new_vcard_item_email_address.xml
+++ b/app/src/main/res/layout/contact_new_vcard_item_email_address.xml
@@ -33,8 +33,8 @@
         android:gravity="center_vertical"
         android:padding="@dimen/padding_m"
         android:text="@string/add_new_email"
-
-        android:textSize="16sp"
+        android:textAllCaps="true"
+        android:textColor="@color/cornflower_blue"
         app:drawableStartCompat="@drawable/ic_plus" />
 
     <LinearLayout
