Hide UI elements for missing features
The UI elements should be brought back when the features are implemented.

MAILAND-1978

--- a/app/src/main/res/layout/fragment_labels_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_labels_action_sheet.xml
@@ -87,7 +87,9 @@
                 android:enabled="false"
                 android:focusable="true"
                 android:text="@string/new_label"
-                app:drawableStartCompat="@drawable/ic_add" />
+                app:drawableStartCompat="@drawable/ic_add"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/text_view_labels_sheet_new_folder"
@@ -99,8 +101,8 @@
                 android:enabled="false"
                 android:focusable="true"
                 android:text="@string/new_folder"
-                android:visibility="gone"
                 app:drawableStartCompat="@drawable/ic_add"
+                android:visibility="gone"
                 tools:visibility="visible" />
 
             <androidx.recyclerview.widget.RecyclerView
