--- a/app/src/main/res/layout/activity_mailbox.xml
+++ b/app/src/main/res/layout/activity_mailbox.xml
@@ -48,7 +48,8 @@
             android:layout_height="@dimen/mailbox_status_view_height"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            android:visibility="gone" />
 
         <!-- TODO: Should be removed and replaced with MAILAND-1503 -->
         <ch.protonmail.android.views.alerts.StorageLimitAlert
