--- a/app/src/main/res/layout/contact_address_detailed.xml
+++ b/app/src/main/res/layout/contact_address_detailed.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (c) 2020 Proton Technologies AG
 
 This file is part of ProtonMail.
@@ -18,46 +17,41 @@ You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/address_detailed_parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:visibility="gone">
+    android:visibility="gone"
+    tools:visibility="visible">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ch.protonmail.android.views.CustomFontTextView
-            style="@style/V3EditText.NoBg"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="@dimen/fields_default_space_small"
+            android:layout_marginHorizontal="@dimen/padding_m"
+            android:layout_marginVertical="@dimen/padding_s"
             android:clickable="false"
             android:focusable="false"
             android:gravity="center_vertical"
             android:singleLine="true"
             android:text="@string/address_street"
             android:textColor="@color/contact_heading"
-            android:textSize="13sp"
-            app:fontName="Roboto-Light.ttf" />
+            android:textSize="13sp" />
 
-        <ch.protonmail.android.views.CustomFontEditText
+        <me.proton.core.presentation.ui.view.ProtonInput
             android:id="@+id/address_street"
-            style="@style/V3EditText.Inverted"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="@dimen/fields_default_space_small"
-            android:gravity="center_vertical"
-            android:paddingBottom="@dimen/fields_default_space_small"
+            android:layout_marginHorizontal="@dimen/padding_m"
             android:singleLine="true"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            app:fontName="Roboto-Regular.ttf" />
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -66,34 +60,28 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ch.protonmail.android.views.CustomFontTextView
-            style="@style/V3EditText.NoBg"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="@dimen/fields_default_space_small"
+            android:layout_marginHorizontal="@dimen/padding_m"
+            android:layout_marginVertical="@dimen/padding_s"
             android:clickable="false"
             android:focusable="false"
             android:gravity="center_vertical"
             android:singleLine="true"
             android:text="@string/address_city"
             android:textColor="@color/contact_heading"
-            android:textSize="13sp"
-            app:fontName="Roboto-Light.ttf" />
+            android:textSize="13sp" />
 
-        <ch.protonmail.android.views.CustomFontEditText
+        <me.proton.core.presentation.ui.view.ProtonInput
             android:id="@+id/address_city"
-            style="@style/V3EditText.Inverted"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="@dimen/fields_default_space_small"
-            android:gravity="center_vertical"
-            android:paddingBottom="@dimen/fields_default_space_small"
+            android:layout_marginHorizontal="@dimen/padding_m"
             android:singleLine="true"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            app:fontName="Roboto-Regular.ttf" />
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -109,31 +97,28 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <ch.protonmail.android.views.CustomFontTextView
-                style="@style/V3EditText.NoBg"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginHorizontal="@dimen/padding_m"
+                android:layout_marginVertical="@dimen/padding_s"
                 android:clickable="false"
                 android:focusable="false"
                 android:gravity="center_vertical"
                 android:singleLine="true"
                 android:text="@string/address_region"
                 android:textColor="@color/contact_heading"
-                android:textSize="13sp"
-                app:fontName="Roboto-Light.ttf" />
+                android:textSize="13sp" />
 
-            <ch.protonmail.android.views.CustomFontEditText
+            <me.proton.core.presentation.ui.view.ProtonInput
                 android:id="@+id/address_region"
-                style="@style/V3EditText.Inverted"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:layout_marginStart="@dimen/padding_m"
                 android:singleLine="true"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                app:fontName="Roboto-Regular.ttf" />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -143,31 +128,29 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <ch.protonmail.android.views.CustomFontTextView
-                style="@style/V3EditText.NoBg"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginHorizontal="@dimen/padding_m"
+                android:layout_marginVertical="@dimen/padding_s"
                 android:clickable="false"
                 android:focusable="false"
                 android:gravity="center_vertical"
                 android:singleLine="true"
                 android:text="@string/address_postcode"
                 android:textColor="@color/contact_heading"
-                android:textSize="13sp"
-                app:fontName="Roboto-Light.ttf" />
+                android:textSize="13sp" />
 
-            <ch.protonmail.android.views.CustomFontEditText
+            <me.proton.core.presentation.ui.view.ProtonInput
                 android:id="@+id/address_postcode"
-                style="@style/V3EditText.Inverted"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:layout_marginStart="@dimen/padding_m"
+                android:layout_marginEnd="@dimen/padding_m"
                 android:singleLine="true"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                app:fontName="Roboto-Regular.ttf" />
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
@@ -176,33 +159,27 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ch.protonmail.android.views.CustomFontTextView
-            style="@style/V3EditText.NoBg"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="@dimen/fields_default_space_small"
+            android:layout_marginHorizontal="@dimen/padding_m"
+            android:layout_marginVertical="@dimen/padding_s"
             android:clickable="false"
             android:focusable="false"
             android:gravity="center_vertical"
             android:singleLine="true"
             android:text="@string/address_country"
             android:textColor="@color/contact_heading"
-            android:textSize="13sp"
-            app:fontName="Roboto-Light.ttf" />
+            android:textSize="13sp" />
 
-        <ch.protonmail.android.views.CustomFontEditText
+        <me.proton.core.presentation.ui.view.ProtonInput
             android:id="@+id/address_country"
-            style="@style/V3EditText.Inverted"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="@dimen/fields_default_space_small"
-            android:gravity="center_vertical"
-            android:paddingBottom="@dimen/fields_default_space_small"
+            android:layout_marginHorizontal="@dimen/padding_m"
             android:singleLine="true"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            app:fontName="Roboto-Regular.ttf" />
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
