--- a/app/src/main/res/layout/fragment_pin.xml
+++ b/app/src/main/res/layout/fragment_pin.xml
@@ -236,7 +236,7 @@
             android:id="@+id/backward_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_delete"
+            android:background="@drawable/ic_delete_big"
             android:importantForAccessibility="yes"
             android:visibility="visible" />
     </LinearLayout>
