--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -126,6 +126,7 @@
     <dimen name="min_width_label">56dp</dimen>
 
     <!-- Settings -->
+    <dimen name="settings_item_min_height">48dp</dimen>
     <dimen name="settings_radio_button_margin">12dp</dimen>
     <dimen name="settings_snooze_day_size">40dp</dimen>
     <dimen name="settings_pin_key_button_size">72dp</dimen>
