--- a/app/src/main/res/layout/activity_attachment_storage.xml
+++ b/app/src/main/res/layout/activity_attachment_storage.xml
@@ -98,10 +98,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:paddingEnd="@dimen/padding_l" />
 
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@drawable/list_divider" />
+        <View style="@style/ViewSeparatorHorizontal"/>
 
         <RelativeLayout
             android:id="@+id/clear_cache_container"
@@ -127,9 +124,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 android:text="@string/local_cache_management" />
         </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@drawable/list_divider" />
+        <View style="@style/ViewSeparatorHorizontal"/>
     </LinearLayout>
 </LinearLayout>
