--- a/app/src/main/res/layout/activity_snooze_notifications.xml
+++ b/app/src/main/res/layout/activity_snooze_notifications.xml
@@ -61,10 +61,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/list_divider" />
+            <View style="@style/ViewSeparatorHorizontal"/>
 
             <LinearLayout
                 android:id="@+id/notifications_snooze_status_container"
@@ -92,10 +89,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                     android:text="@string/notifications_snoozed" />
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/list_divider" />
+            <View style="@style/ViewSeparatorHorizontal"/>
 
             <LinearLayout
                 android:id="@+id/notificationsSnoozeScheduledContainer"
@@ -144,10 +138,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
                     </RelativeLayout>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@drawable/list_divider" />
+                    <View style="@style/ViewSeparatorHorizontal"/>
 
                     <RelativeLayout
                         android:id="@+id/snooze_end_time_container"
@@ -173,10 +164,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
                     </RelativeLayout>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@drawable/list_divider" />
+                    <View style="@style/ViewSeparatorHorizontal"/>
 
                     <LinearLayout
                         android:id="@+id/snooze_repeat_container"
@@ -299,10 +287,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                                 android:textColor="@color/text_norm" />
                         </LinearLayout>
 
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:background="@drawable/list_divider" />
+                        <View style="@style/ViewSeparatorHorizontal"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
