--- a/app/src/main/res/layout/settings_swipe_fragment.xml
+++ b/app/src/main/res/layout/settings_swipe_fragment.xml
@@ -21,9 +21,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_norm"
     android:clickable="true"
-    android:focusable="true"
-    android:background="@color/background_norm">
+    android:focusable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/info"
@@ -134,9 +134,8 @@
         app:layout_constraintTop_toBottomOf="@id/left_to_right_preview" />
 
     <View
+        style="@style/ViewSeparatorHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@drawable/list_divider"
         app:layout_constraintTop_toBottomOf="@id/divider" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -195,8 +194,7 @@
             android:layout_height="@dimen/settings_swipe_placeholder_height"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/right_to_left_image"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/right_to_left_image"
