Create DaysAndHoursPickerView.kt with DaysAndHoursPickerViewTest.kt
MAILAND-1672, MAILAND-1670

--- a/app/src/main/res/layout/view_checkable_button.xml
+++ b/app/src/main/res/layout/view_checkable_button.xml
@@ -46,7 +46,7 @@
         app:layout_constraintHorizontal_bias="0.87"
         app:layout_constraintVertical_bias="0.75"
         android:background="@drawable/shape_ellipse"
-        android:backgroundTint="@color/brand"
+        android:backgroundTint="?brand_norm"
         android:src="@drawable/shape_check"
         android:visibility="gone"
         tools:visibility="visible"/>
