--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -26,7 +26,7 @@
     </declare-styleable>
 
     <declare-styleable name="CheckableButton">
-        <attr name="icon" format="reference"/>
+        <attr name="checkableButtonIcon" format="reference"/>
     </declare-styleable>
 
     <declare-styleable name="LabelChipView">
