Move attachments click listener to ComposeMessageKotlinActivity.kt
MAILAND-1672, MAILAND-1670

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,7 +67,7 @@
         <item name="android:minWidth">@dimen/size_badge</item>
         <item name="android:ellipsize">end</item>
         <item name="android:background">@drawable/shape_ellipse</item>
-        <item name="backgroundTint">@color/brand</item>
+        <item name="backgroundTint">?brand_norm</item>
     </style>
 
     <!-- region Mailbox -->
