--- a/app/src/main/res/layout/layout_composer_bottom_app_bar.xml
+++ b/app/src/main/res/layout/layout_composer_bottom_app_bar.xml
@@ -17,12 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_composer_field">
+    android:layout_height="@dimen/height_composer_field"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/composer_bottom_bar_start_guideline"
@@ -84,4 +85,4 @@
         tools:text="1"
         tools:visibility="visible" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
